package Calculator;

public class Input {

        public boolean isValidInput(String input) {
            // Prüfen, ob die Eingabe gültig ist (z. B. keine doppelten Punkte, korrekt geschlossene Klammern)
            return false;
    }

}
