package Calculator;

import java.util.ArrayList;
import java.util.List;

public class Logic {


    public double calculate(String expression) {
        // Implementierung der Berechnungslogik, z. B. Parsen des Ausdrucks und Anwenden von Operatoren
        return 0;
    }

}


